mus: Remove DCHECK that was causing false positives.

When translating from a key event to a character event, it's valid to
have the character change, ie, from 'M' to '^M'.

BUG=633401

Review-Url: https://codereview.chromium.org/2203953002
Cr-Commit-Position: refs/heads/master@{#409368}

Former-commit-id: 663728cb129b3ce5740a9b31adc9a190e283e903